# aoc

./: Cargo.toml  LICENSE  README.md
_examples/: day18.rs  day19.rs  day20.rs  day21.rs  day23.rs
examples/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/: lib.rs  main.rs  util.rs
src/util/: bit.rs  break.rs  graph.rs  grid.rs  imat3.rs  index.rs  knapsack.rs  letter.rs  letter_counts.rs  linked_list.rs  linked_trie.rs  minimal_value_with_all_digit_pairs.rs  necklace.rs  no_drop_vec.rs  pixel.rs  region_tree.rs  set_and_vec.rs  static_string.rs  table.rs  template.rs
src/y2015/: d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d2.rs  d20.rs  d24.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs
src/y2016/: d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d2.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs
src/y2017/: d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d2.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs
src/y2018/: d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d2.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs
src/y2021/: d1.rs  d10.rs  d11.rs  (+22 more)
(+85 files in other folders)
