[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.6"
bitvec = "1.0.1"
clap = { version = "4.0.29", features = ["derive"] }
derive_deref = "1.1.1"
futures = "0.3.30"
glam = "0.25.0"
md5 = "0.7.0"
memmap = "0.7.0"
nom = "7.1.3"
num = "0.4.0"
pin-utils = "0.1.0"
rand = "0.8.5"
rayon = "1.6.1"
serde_json = "1.0.125"
static_assertions = "1.1.0"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
